# profit

./: Cargo.toml  Dockerfile
.github/workflows/: mirror.yml
ausarbeitung/: ausarbeitung.tex  main.tex
cli/: Cargo.toml
cli/src/: main.rs
examples/: 001.solution.json  001.task.json  002.solution.001.json  002.task.json  003.task.json  004.task.json
sim/: Cargo.toml
sim/src/: board.rs  building.rs  dto.rs  error.rs  lib.rs  sim.rs  test.rs
simulator/: Cargo.toml
simulator/src/: dto.rs  error.rs  game.rs  lib.rs  main.rs  sim.rs  test.rs
solutions/001/: solution.json
solver/: Cargo.toml
solver/src/: cluster.rs  combine.rs  connect.rs  distance.rs  error.rs  lib.rs  network.rs  region.rs  stats.rs  test.rs
solver/src/connect/: test.rs
tasks/003/: solution_002.json
tasks/005/: task.json
tasks/006/: task.json
tasks/007/: task.json
tasks/008/: task.json
tasks/009/: task.json
tasks/011/: task.json
