[workspace]
members = [
    "sim",
    "solver",
    "cli",
]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[workspace.dependencies]
sim = { package = "profit_sim", path = "sim" }
solver = { package = "profit_solver", path = "solver" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
